--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- blocco superiore -->
 
-    <header>
+    <header class="titolo">
 
     </header>
 
@@ -19,31 +19,35 @@
 
     <main>
 
-      <section>
+      <section class="contenuto">
 
-      </section>
-
-      <section>
-
-      </section>
-
-      <section>
-
-        <!-- sezione superiore -->
-
-        <div>
-
+        <div class="sinistra">
+          lorem
         </div>
 
-        <!-- / sezione superiore -->
-
-        <!-- sezione inferiore -->
-
-        <div>
-
+        <div class="centro">
+          lorem
         </div>
 
-        <!-- sezione inferiore -->
+        <div class="destra">
+
+          <!-- sezione superiore -->
+
+          <div class="superiore">
+            lorem
+          </div>
+
+          <!-- / sezione superiore -->
+
+          <!-- sezione inferiore -->
+
+          <div class="inferiore">
+            lorem
+          </div>
+
+          <!-- sezione inferiore -->
+
+        </div>
 
       </section>
 
@@ -53,7 +57,7 @@
 
     <!-- blocco inferiore -->
 
-    <footer>
+    <footer class="base">
 
     </footer>
 
