margin div destra

--- a/index.html
+++ b/index.html
@@ -17,41 +17,37 @@
 
     <!-- blocco centrale -->
 
-    <main>
+    <section class="contenuto">
 
-      <section class="contenuto">
+      <div class="sinistra">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
 
-        <div class="sinistra">
-          lorem
+      <div class="centro">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+
+      <div class="destra">
+
+        <!-- sezione superiore -->
+
+        <div class="superiore">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
 
-        <div class="centro">
-          lorem
+        <!-- / sezione superiore -->
+
+        <!-- sezione inferiore -->
+
+        <div class="inferiore">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
 
-        <div class="destra">
+        <!-- sezione inferiore -->
 
-          <!-- sezione superiore -->
+      </div>
 
-          <div class="superiore">
-            lorem
-          </div>
-
-          <!-- / sezione superiore -->
-
-          <!-- sezione inferiore -->
-
-          <div class="inferiore">
-            lorem
-          </div>
-
-          <!-- sezione inferiore -->
-
-        </div>
-
-      </section>
-
-    </main>
+    </section>
 
     <!-- / blocco centrale -->
 
