--- a/index.html
+++ b/index.html
@@ -6,59 +6,61 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div class="container">
 
-    <!-- blocco superiore -->
+      <!-- blocco superiore -->
 
-    <header class="titolo">
+      <header class="titolo">
 
-    </header>
+      </header>
 
-    <!-- / blocco superiore -->
+      <!-- / blocco superiore -->
 
-    <!-- blocco centrale -->
+      <!-- blocco centrale -->
 
-    <section class="contenuto">
+      <section class="contenuto">
 
-      <div class="sinistra">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
-
-      <div class="centro">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
-
-      <div class="destra">
-
-        <!-- sezione superiore -->
-
-        <div class="superiore">
+        <div class="sinistra">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
 
-        <!-- / sezione superiore -->
-
-        <!-- sezione inferiore -->
-
-        <div class="inferiore">
+        <div class="centro">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
 
-        <!-- sezione inferiore -->
+        <div class="destra">
 
-      </div>
+          <!-- sezione superiore -->
 
-    </section>
+          <div class="superiore">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
 
-    <!-- / blocco centrale -->
+          <!-- / sezione superiore -->
 
-    <!-- blocco inferiore -->
+          <!-- sezione inferiore -->
 
-    <footer class="base">
+          <div class="inferiore">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
 
-    </footer>
+          <!-- sezione inferiore -->
 
-    <!-- / blocco inferiore -->
+        </div>
 
+      </section>
+
+      <!-- / blocco centrale -->
+
+      <!-- blocco inferiore -->
+
+      <footer class="base">
+
+      </footer>
+
+      <!-- / blocco inferiore -->
+
+    </div>
 
   </body>
 </html>
